@@ -15,6 +15,8 @@ layer at (0,0) size 800x600
       RenderFrame {FRAME} at (403,0) size 397x600
         layer at (0,0) size 397x600
           RenderView at (0,0) size 397x600
-        layer at (0,0) size 397x8
-          RenderBlock {HTML} at (0,0) size 397x8
-            RenderBody {BODY} at (8,8) size 381x0
+        layer at (0,0) size 397x600
+          RenderBlock {HTML} at (0,0) size 397x600
+            RenderBody {BODY} at (8,8) size 381x584
+              RenderText {#text} at (0,0) size 21x18
+                text run at (0,0) width 21: "foo"
