@@ -1,3 +1,14 @@
+2007-06-25  Matt Perry  <mpComplete@gmail.com>
+
+        Reviewed by Sam Weinig.
+
+        Modify test to wait until the second frame loads, and update its expected output to match.
+
+        * fast/dom/HTMLDocument/frameless-location-bugzilla10837-expected.checksum:
+        * fast/dom/HTMLDocument/frameless-location-bugzilla10837-expected.png:
+        * fast/dom/HTMLDocument/frameless-location-bugzilla10837-expected.txt:
+        * fast/dom/HTMLDocument/frameless-location-bugzilla10837.html:
+
 2007-06-25  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Maciej.
